--- a/templates/layout.html
+++ b/templates/layout.html
@@ -10,7 +10,7 @@
     <div id="content">{% block content %}{% endblock %}</div>
     <div id="footer">
         {% block footer %}
-        - by <a href="http://github.com/m4nolo/">M4nolo</a>.
+        - by <a href="http://github.com/m4nolo/">M4nolo</a> & <a href="http://github.com/kaiomax/">Kaio</a>.
         {% endblock %}
     </div>
 </body>
